--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -2,6 +2,9 @@
 @addTagHelper *, ConstructionSite
 @addTagHelper ConstructionSite.Areas.ConstructionAdmin.TagHelpers.*,ConstructionSite
 @using ConstructionSite.DTO.AdminViewModels.About
+@using ConstructionSite.DTO.AdminViewModels.Account
+@using ConstructionSite.DTO.AdminViewModels.AddModel
+@using ConstructionSite.DTO.ModelsDTO 
 @using ConstructionSite.DTO.AdminViewModels
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.DTO.AdminViewModels.AddModel
