--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -3,9 +3,12 @@
 @addTagHelper ConstructionSite.Areas.ConstructionAdmin.TagHelpers.*,ConstructionSite
 @using ConstructionSite.DTO.AdminViewModels.About
 @using ConstructionSite.DTO.AdminViewModels.Account
-@using ConstructionSite.DTO.AdminViewModels.AddModel
+@using ConstructionSite.DTO.AdminViewModels.Description 
+@using ConstructionSite.DTO.AdminViewModels.Portfolio
+@using ConstructionSite.DTO.AdminViewModels.Project
+@using ConstructionSite.DTO.AdminViewModels.Service
+@using ConstructionSite.DTO.AdminViewModels.SubService
 @using ConstructionSite.DTO.ModelsDTO 
 @using ConstructionSite.DTO.AdminViewModels
-@using ConstructionSite.Entity.Identity
-@using ConstructionSite.DTO.AdminViewModels.AddModel
+
 
