--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -1,14 +1,16 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ConstructionSite
 @addTagHelper ConstructionSite.Areas.ConstructionAdmin.TagHelpers.*,ConstructionSite
-@using ConstructionSite.DTO.AdminViewModels.About
 @using ConstructionSite.DTO.AdminViewModels.Account
-@using ConstructionSite.DTO.AdminViewModels.Description 
+@using ConstructionSite.DTO.AdminViewModels.About
+@using ConstructionSite.DTO.AdminViewModels.Description
 @using ConstructionSite.DTO.AdminViewModels.Portfolio
 @using ConstructionSite.DTO.AdminViewModels.Project
 @using ConstructionSite.DTO.AdminViewModels.Service
 @using ConstructionSite.DTO.AdminViewModels.SubService
 @using ConstructionSite.DTO.ModelsDTO 
+@using ConstructionSite.Areas.ConstructionAdmin
+@using ConstructionSite.Areas.ConstructionAdmin.Models
 @using ConstructionSite.DTO.AdminViewModels
 
 
