--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels.UserViewModel
+﻿@model UserViewModel
 <!--main content start-->
 <section id="main-content">
     <section class="wrapper">
