--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -12,5 +12,6 @@
 @using ConstructionSite.Areas.ConstructionAdmin
 @using ConstructionSite.Areas.ConstructionAdmin.Models
 @using ConstructionSite.DTO.AdminViewModels
+@using ConstructionSite.Entity.Models
 
 
