About_Controller_But_Not_Wrok_image_delle

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Update.cshtml
@@ -63,7 +63,7 @@
                     <div class="form-group">
 
                         <div class="col-lg-10">
-                            <input type="file" name="FileData" placeholder="Images" id="f-name" class="form-control">
+                            <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
 
                         </div>
                     </div>
