--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/AdminComponents/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<UserDTO>
-    <div class="panel-body bio-graph-info">
-        @foreach (var admin in Model)
-        {
+<div class="panel-body bio-graph-info">
+    @foreach (var admin in Model)
+    {
         <div class="row">
             <div class="bio-row">
                 <p><span>Name </span>: @admin.Name</p>
@@ -14,10 +14,26 @@
             </div>
 
             <a class="btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@admin.Id">Edit Admin Profile</a>
-            <a class="btn btn-danger" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" asp-route-id="@admin.Id">Delete Admin Profile</a>
+          
+            <a  class="btn btn-danger" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Delete" asp-route-id="@admin.Id">Delete Admin Profile</a>
 
             <hr />
         </div>
-        }
 
-    </div>
+    }
+
+</div>
+@section scripts{
+
+    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
+    <script>
+        $(document).ready(function () {
+            $(".delete-item").click(function () {
+                alert("Salam");
+            });
+        });
+
+
+    </script>
+
+}
