--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
@@ -54,7 +54,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-10">
-                                <select class="form-control m-bot15" asp-for="PortfolioId" asp-items="@ViewBag.items">
+                                <select class="form-control m-bot15" asp-for="SubServiceID" asp-items="@ViewBag.items">
 
                                     <option>Please select one</option>
                                 </select>
