--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DescriptionAddViewModel
-@{
+@*@{
     ViewData["Title"] = "Add";
-}
+}*@
 
     <div class="row">
         <div class="col-lg-12">
@@ -11,7 +11,7 @@
                 </header>
                 <div class="panel-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Add" method="post">
-                        <input type="hidden" name="SubServiceID" value="@Model.Id" />
+                       
                         <div class="form-group">
 
                             <div class="col-lg-10">
@@ -54,10 +54,16 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-10">
-                                <select class="form-control m-bot15" asp-for="SubServiceID" asp-items="@ViewBag.items">
+                                <select asp-for="SubServiceID">
+                                    @foreach (var item in ViewBag.items)
+                                    {
+                                        <option value="@item.Id">@item.Name</option>
+                                    }
+                                </select>
+                                @*<select class="form-control m-bot15" asp-for="SubServiceID" asp-items="@ViewBag.items">
 
                                     <option>Please select one</option>
-                                </select>
+                                </select>*@
                             </div>
 
                         </div>
