--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
@@ -3,7 +3,7 @@
 <li><a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Index">Services</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Index">SubService</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
-<li><a asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Add">Portfolio</a></li>
+<li><a asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Add">Description</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="News" asp-action="Index">News</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index">Contact</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Image" asp-action="Index">Images</a></li>
