--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Description/Index.cshtml
@@ -33,7 +33,7 @@
                                 <td class=" ">@item.Content</td>
 
                                 <td class=" "><a class="edit btn btn-primary" asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
-                                <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
+                                <td class=" "><a class="btn btn-danger"asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
                             </tr>
                         }
                     </tbody>
