--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
@@ -3,5 +3,48 @@
     ViewData["Title"] = "Update";
 }
 
-<h1>Update</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <section class="panel">
+                <header class="panel-heading">
+                    Portfolio About
+                </header>
+                <div class="panel-body">
+                    <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
+                       
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+
+                            </div>
+                        </div>
+
+                      
+                       
+
+                        <div class="form-group">
+                            <div class="col-lg-offset-2 col-lg-10">
+                                <button class="btn btn-success" type="submit">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </section>
+        </div>
+    </div>
 
