BlogControleer ve Blog uchun indexşhtml hazirdir

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.DTO.AdminViewModels.AddModel
 @using ConstructionSite.Areas.ConstructionAdmin.Models.DTO
+@using ConstructionSite.DTO.ModelsDTO 
