--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
@@ -1,8 +1,8 @@
 ﻿<li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index">Profile</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="About" asp-action="Index">About</a></li>
+<li><a asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Index">Blog</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Index">Services</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Index">SubService</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Index">Portfolio</a></li>
-<li><a asp-area="ConstructionAdmin" asp-controller="News" asp-action="Index">News</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index">Contact</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Image" asp-action="Index">Images</a></li>
