--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -151,8 +151,8 @@
                   
         @await Component.InvokeAsync("About")
         @await Component.InvokeAsync("Service")
-        @await Component.InvokeAsync("Portfolio")
-        @await Component.InvokeAsync("Testimonial")
+        @*@await Component.InvokeAsync("Portfolio")
+        @await Component.InvokeAsync("Testimonial")*@
 
 
                 </div>
@@ -163,7 +163,7 @@
 
         </div>
         <!-- /.container -->
-        @(await Component.InvokeAsync("Blog"))
+        @*@(await Component.InvokeAsync("Blog"))*@
         <section id="contact" class="wprt-section">
             <div class="container">
                 <div class="row">
