--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -4,4 +4,4 @@
 @using ConstructionSite
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
-@using ConstructionSite.TagHelpers
+@*@using ConstructionSite.TagHelpers*@
