--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using ConstructionSite.DTO.FrontViewModels
+@using ConstructionSite.DTO.FrontViewModels.About
+@using ConstructionSite.DTO.FrontViewModels.Portfoli
+@using ConstructionSite.DTO.FrontViewModels.Service 
 @using ConstructionSite.DTO.ModelsDTO;
 @using ConstructionSite
 @using ConstructionSite.Entity.Models
