ConstructionSite.Areas.ConstructionAdmin.Controllers

--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -9,11 +9,11 @@
                     <div class="line-1"></div>
                 </div>
                 <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
-                <p class="wprt-subtitle">@Model.Title</p>
+                <p class="wprt-subtitle">@Model.Tittle</p>
                 <div class="link"><a asp-controller="About" asp-action="Index" class="wprt-button small rounded-3px">READ MORE</a></div>
                 <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
                 <div class="text-center">
-                    <img src="@Model.image" alt="image" />
+                    <img src="@Model.Image" alt="image" />
                 </div>
             </div>
             <!-- /.col-md-12 -->
