Create ucun Action ve View yaratdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Index.cshtml
@@ -12,7 +12,7 @@
 
 <section class="panel">
     <header class="panel-heading">
-        Portfolio Elements Table
+        News Elements Table
     </header>
     <div class="panel-body">
         <div class="button-create">
