--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -150,7 +150,7 @@
                 <div class="page-content">
                   
         @await Component.InvokeAsync("About")
-        @await Component.InvokeAsync("Service")
+        @*@await Component.InvokeAsync("Service")*@
         @*@await Component.InvokeAsync("Portfolio")
         @await Component.InvokeAsync("Testimonial")*@
 
