--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model BlogCreateModel
-
+﻿
 @{
     ViewData["Title"] = "Add";
 }
@@ -12,47 +11,45 @@
             </header>
             <div class="panel-body">
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" method="post" enctype="multipart/form-data">
-                    <div asp-validation-summary="ModelOnly" class="text-danger">Please fix the error.</div>
-                    @Html.AntiForgeryToken()
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleAz" placeholder="TittleAz" id="f-name" class="form-control">
+                            <input type="text" name="TittleAz" placeholder="TittleAz" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleEn" placeholder="TittleEn" id="f-name" class="form-control">
+                            <input type="text" name="TittleEn" placeholder="TittleEn" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" asp-for="TittleRu" placeholder="TittleRu" id="f-name" class="form-control">
+                            <input type="text" name="TittleRu" placeholder="TittleRu" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" placeholder="ContentAz" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea name="ContentAz" placeholder="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" placeholder="ContentEn" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea name="ContentEn" placeholder="ContentEn" class="form-control " id="ccomment" required=""></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" placeholder="ContentRu" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea name="ContentRu" placeholder="ContentRu" class="form-control " id="ccomment" required=""></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="file" asp-for="Img" placeholder="Images" id="f-name" class="form-control">
+                            <input type="file" name="Images" id="f-name" class="form-control">
 
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input size="16" type="text" asp-for="CreateDate" value="2012-06-15 14:45" readonly class="form_datetime form-control">
+                            <input size="16" type="text" name="CreateDate" value="2012-06-15 14:45" readonly class="form_datetime form-control">
                         </div>
                     </div>
                     <div class="form-group">
