--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Edit.cshtml
@@ -1,55 +1,54 @@
-﻿
-@{
-    ViewData["Title"] = "Add";
-}
+﻿@model BlogEditModel
 
 <div class="row">
     <div class="col-lg-12">
         <section class="panel">
             <header class="panel-heading">
-                Create News Elements
+                Update About
             </header>
             <div class="panel-body">
-                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Create" method="post" enctype="multipart/form-data">
+                <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Blog" asp-action="Edit" method="post" enctype="multipart/form-data">
+                    <input type="hidden" name="Id" value="@Model.Id" />
+                    <input type="hidden" name="aboutID" value="@Model.NewsId" />
+                    <input type="hidden" name="imageId" value="@Model.ImageId" />
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" name="TittleAz" placeholder="TittleAz" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleAz" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" name="TittleEn" placeholder="TittleEn" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleEn" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="text" name="TittleRu" placeholder="TittleRu" id="f-name" class="form-control">
+                            <input type="text" asp-for="TittleRu" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea name="ContentAz" placeholder="ContentAz" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentAz" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea name="ContentEn" placeholder="ContentEn" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea name="ContentRu" placeholder="ContentRu" class="form-control " id="ccomment" required=""></textarea>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-lg-10">
+                            <img src="@Model.Image" width="60" height="70" alt="Alternate Text" />
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="file" name="Images" id="f-name" class="form-control">
-
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-lg-10">
-                            <input size="16" type="text" name="CreateDate" value="2012-06-15 14:45" readonly class="form_datetime form-control">
+                            <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
