--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Blog/Create.cshtml
@@ -43,8 +43,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
-                            <input type="file" name="Images" id="f-name" class="form-control">
-
+                            <input type="file" name="file" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
