Added_TagHelper_For_Service_length

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -1,6 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, ConstructionSite
-@*@addTagHelper ConstructionSite.Areas.ConstructionAdmin.TagHelpers.*,ConstructionSite*@
+@addTagHelper ConstructionSite.Areas.ConstructionSite.TagHelpers.*,ConstructionSite*
 @using ConstructionSite.DTO.AdminViewModels.Account
 @using ConstructionSite.DTO.AdminViewModels.About
 @using ConstructionSite.DTO.AdminViewModels.Description
