--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -150,10 +150,10 @@
                 <div class="page-content">
                   
                   
-        @*@await Component.InvokeAsync("About")*@
-        @*@await Component.InvokeAsync("Service")*@
-        @*@await Component.InvokeAsync("Portfolio")
-        @await Component.InvokeAsync("Testimonial")*@
+        @await Component.InvokeAsync("About")
+        @await Component.InvokeAsync("Service")
+        @await Component.InvokeAsync("Portfolio")
+        @*@await Component.InvokeAsync("Testimonial")*@
 
 
                 </div>
