--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -57,7 +57,7 @@
                                         </div>
                                         <div class="service-item-wrap">
                                             <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">@item.Name</a></h3>
-                                            <p class="desc">@item.Tittle</p>
+                                            <p class="desc" text="@item.Tittle"></p>
                                         </div>
                                     </div>
                                 </div>
