--- a/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
@@ -20,7 +20,7 @@
 
         <div class="wprt-project" data-layout="grid" data-column="4" data-column2="3" data-column3="2" data-column4="1" data-gaph="0" data-gapv="0">
             <div id="project-filter">
-                <div data-filter="*" class="cbp-filter-item">
+                @*<div data-filter="*" class="cbp-filter-item">
                     <span>All</span>
                 </div>
                 <div data-filter=".architecture" class="cbp-filter-item">
@@ -28,19 +28,15 @@
                 </div>
                 <div data-filter=".building" class="cbp-filter-item">
                     <span>Building</span>
-                </div>
-                <div data-filter=".garden" class="cbp-filter-item">
-                    <span>Garden</span>
-                </div>
-                <!--  <div data-filter=".interior" class="cbp-filter-item">
-                <span>Interior</span>
-            </div>
-            <div data-filter=".office" class="cbp-filter-item">
-                <span>Office</span>
-            </div>
-            <div data-filter=".workspace" class="cbp-filter-item">
-                <span>Workspace</span>
-            </div> -->
+                </div>*@
+
+                @foreach (PortfolioViewModel item in ViewBag.por)
+                {
+                    <div data-filter=".garden" class="cbp-filter-item">
+                        <span>@item.Name</span>
+                    </div>
+                }
+
             </div>
             <!-- /#project-filter -->
 
