--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -1,9 +1,10 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using ConstructionSite
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper ConstructionSite.TagHelpers.*,ConstructionSite
 @using ConstructionSite.DTO.FrontViewModels.About
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
-@using ConstructionSite.DTO.FrontViewModels.Service 
+@using ConstructionSite.DTO.FrontViewModels.Service
 @using ConstructionSite.DTO.ModelsDTO;
 @using ConstructionSite
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
-@*@using ConstructionSite.TagHelpers*@
