--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model AboutAddViewModel
 @{
     ViewData["Title"] = "Add";
 }
@@ -13,21 +13,21 @@
                             <div class="form-group">
 
                                 <div class="col-lg-10">
-                                    <input type="text" name="TittleAz" placeholder="TittleAz" id="f-name" class="form-control">
+                                    <input asp-for="TittleAz" id="f-name" class="form-control">
 
                                 </div>
                             </div>
                             <div class="form-group">
 
                                 <div class="col-lg-10">
-                                    <input type="text" name="TittleRu" placeholder="TittleRu" id="f-name" class="form-control">
+                                    <input asp-for="TittleRu" id="f-name" class="form-control">
 
                                 </div>
                             </div>
                             <div class="form-group">
 
                                 <div class="col-lg-10">
-                                    <input type="text" name="TittleEn" placeholder="TittleEn" id="f-name" class="form-control">
+                                    <input asp-for="TittleEn" id="f-name" class="form-control">
 
                                 </div>
                             </div>
@@ -35,19 +35,19 @@
                             <div class="form-group ">
 
                                 <div class="col-lg-10">
-                                    <textarea placeholder="ContentRu" class="form-control " id="ccomment" name="ContentRu" required=""></textarea>
+                                    <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
                                 </div>
                             </div>
                             <div class="form-group ">
 
                                 <div class="col-lg-10">
-                                    <textarea placeholder="ContentEn" class="form-control " id="ccomment" name="ContentEn" required=""></textarea>
+                                    <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
                                 </div>
                             </div>
                             <div class="form-group ">
 
                                 <div class="col-lg-10">
-                                    <textarea placeholder="ContentAz" class="form-control " id="ccomment" name="ContentAz" required=""></textarea>
+                                    <textarea asp-for="ContentEn" class="form-control " id="ccomment" required=""></textarea>
                                 </div>
                             </div>
                             <div class="form-group">
