--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Update.cshtml
@@ -7,7 +7,7 @@
         <div class="col-lg-12">
             <section class="panel">
                 <header class="panel-heading">
-                    Portfolio About
+                    Portfolio Update
                 </header>
                 <div class="panel-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
@@ -22,14 +22,14 @@
                         <div class="form-group">
 
                             <div class="col-lg-10">
-                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+                                <input type="text" asp-for="NameRu" id="f-name" class="form-control">
 
                             </div>
                         </div>
                         <div class="form-group">
 
                             <div class="col-lg-10">
-                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+                                <input type="text" asp-for="NameEn" id="f-name" class="form-control">
 
                             </div>
                         </div>
