--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Project/Update.cshtml
@@ -11,7 +11,7 @@
                 </header>
                 <div class="panel-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Update" method="post" enctype="multipart/form-data">
-
+                        <input type="hidden" name="PortfolioId" value="@Model.PortfolioId" />
                         <div class="form-group">
 
                             <div class="col-lg-10">
@@ -22,19 +22,62 @@
                         <div class="form-group">
 
                             <div class="col-lg-10">
-                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+                                <input type="text" asp-for="NameRu" id="f-name" class="form-control">
 
                             </div>
                         </div>
                         <div class="form-group">
 
                             <div class="col-lg-10">
-                                <input type="text" asp-for="NameAz" id="f-name" class="form-control">
+                                <input type="text" asp-for="NameEn" id="f-name" class="form-control">
 
                             </div>
                         </div>
+                        <div class="form-group">
 
+                            <div class="col-lg-10">
+                                <input type="text" asp-for="ContentAz" id="f-name" class="form-control">
 
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                                <input type="text" asp-for="ContentRu" id="f-name" class="form-control">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                                <input type="text" asp-for="ContentEn" id="f-name" class="form-control">
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                              @foreach (var item in ViewBag.proj)
+                              {
+
+                              }
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                                <img src="@Model.ImagePath" alt="Alternate Text" />
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+
+                            <div class="col-lg-10">
+                                <input type="file" name="file" id="f-name" class="form-control">
+
+                            </div>
+                        </div>
 
 
                         <div class="form-group">
