--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -40,7 +40,10 @@
 
                                     <td class="sorting_1">@item.Name</td>
                                     <td class=" ">@item.Content</td>
-                                    <td class=" "><a class="btn btn-success delete delete-about">Add</a></td>
+                                    <td class="">
+                                        <img src="@item.ImagePath" alt="Alternate Text" />
+                                    </td>
+                                   
                                     <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
                                     <td class=" "><a class="btn btn-danger delete delete-about">Delete</a></td>
                                 </tr>
