--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -38,19 +38,19 @@
                                 <div class="form-group ">
 
                                     <div class="col-lg-10">
-                                        <textarea placeholder="TittleAz" class="form-control " id="ccomment" asp-for="ContentAz" required=""></textarea>
+                                        <textarea  class="form-control " id="ccomment" asp-for="ContentAz" required=""></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group ">
 
                                     <div class="col-lg-10">
-                                        <textarea placeholder="TittleEn" class="form-control " id="ccomment" asp-for="ContentRu" required=""></textarea>
+                                        <textarea  class="form-control " id="ccomment" asp-for="ContentRu" required=""></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group ">
 
                                     <div class="col-lg-10">
-                                        <textarea placeholder="TittleRu" class="form-control " id="ccomment" asp-for="ContentEn" required=""></textarea>
+                                        <textarea class="form-control " id="ccomment" asp-for="ContentEn" required=""></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
