--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -16,21 +16,21 @@
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="text" asp-for="NameAz" placeholder="NameAz" id="f-name" class="form-control" required="">
+                                        <input type="text" asp-for="NameAz"  id="f-name" class="form-control" required="">
 
                                     </div>
                                 </div>
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="text" asp-for="NameRu" placeholder="NameRu" id="f-name" class="form-control">
+                                        <input type="text" asp-for="NameRu" id="f-name" class="form-control">
 
                                     </div>
                                 </div>
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="text" asp-for="NameEn" placeholder="NameEn" id="f-name" class="form-control">
+                                        <input type="text" asp-for="NameEn"  id="f-name" class="form-control">
 
                                     </div>
                                 </div>
