--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -41,10 +41,10 @@
                                     <td class="sorting_1">@item.Name</td>
                                     <td class=" ">@item.Content</td>
                                     <td class="">
-                                        <img src="@item.ImagePath" alt="Alternate Text" />
+                                        <img width="100" height="100" src="@item.ImagePath" alt="Alternate Text" />
                                     </td>
                                    
-                                    <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
+                                    <td class=" "><a class="edit" asp-controller="SubService" asp-action="Update" asp-route-id="@item.Id">Edit</a></td>
                                     <td class=" "><a class="btn btn-danger delete delete-about">Delete</a></td>
                                 </tr>
                             }
