--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -12,7 +12,8 @@
                 <div class="panel-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="SubService" asp-action="Update" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="Id" value="@Model.Id" />
-                        <input type="hidden" name="ServiceId" value="@Model.ServiceId" />
+                        <input type="hidden" name="ServerId" value="@Model.ServerId" />
+                        <input type="hidden" name="SubServiceId" value="@Model.SubServiceId" />
                         <input type="hidden" name="imageId" value="@Model.imageId" />
                         <div class="form-group">
 
@@ -54,12 +55,7 @@
                                 <textarea asp-for="ContentEn" class="form-control " id="ccomment"></textarea>
                             </div>
                         </div>
-                        <div class="form-group ">
-
-                            <div class="col-lg-10">
-                                <textarea asp-for="ServiceName" class="form-control " id="ccomment"></textarea>
-                            </div>
-                        </div>
+                       
                         <div class="form-group ">
 
                             <div class="col-lg-10">
