--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -2,7 +2,9 @@
 @{
     ViewData["Title"] = "Add";
 }
+    <div asp-validation-summary="All">
 
+    </div>
     <section id="main-content">
         <div class="wrapper">
             <div class="row">
