--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Update.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Update";
 }
 
+<div asp-validation-summary="All">
+
+</div>
     <div class="row">
         <div class="col-lg-12">
             <section class="panel">
