Blog ucun Default.cshtml-i qeyd etdim

--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -8,3 +8,4 @@
 @using ConstructionSite
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
+@using ConstructionSite.DTO.FrontViewModels.Blog
