--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -1,4 +1,6 @@
-﻿<section id="blog" class="wprt-section offer">
+﻿@model IEnumerable<BlogViewModel>
+
+<section id="blog" class="wprt-section offer">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -16,70 +18,76 @@
                     <div id="service-wrap" class="cbp">
                         <div class="cbp-item">
                             <div class="service-item clearfix">
-                                <div class="thumb"><img src="~/assets/img/services/12.jpg" alt="image" /></div>
-                                <div class="service-item-wrap">
-                                    <h3 class="title font-size-18"><a href="#">Construction Consultant</a></h3>
-                                    <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
-                                    <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.cbp-item -->
+                                @foreach (BlogViewModel item in Model)
+                                {
+                                    <div class="thumb"><img src="@item.Image" alt="image" /></div>
+                                    <div class="service-item-wrap">
+                                        <h3 class="title font-size-18"><a href="#">@item.Tittle</a></h3>
+                                        <p>@item.Content</p>
+                                        <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
+                                    </div>
+                                }
 
-                        <div class="cbp-item">
-                            <div class="service-item clearfix">
-                                <div class="thumb"><img src="~/assets/img/services/10.jpg" alt="image" /></div>
-                                <div class="service-item-wrap">
-                                    <h3 class="title font-size-18"><a href="#">Green Building</a></h3>
-                                    <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
-                                    <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.cbp-item -->
-
-                        <div class="cbp-item">
-                            <div class="service-item clearfix">
-                                <div class="thumb"><img src="~/assets/img/services/12.jpg" alt="image" /></div>
-                                <div class="service-item-wrap">
-                                    <h3 class="title font-size-18"><a href="#">Resconstruction Services</a></h3>
-                                    <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
-                                    <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.cbp-item -->
-
-                        <div class="cbp-item">
-                            <div class="service-item clearfix">
-                                <div class="thumb"><img src="~/assets/img/services/10.jpg" alt="image" /></div>
-                                <div class="service-item-wrap">
-                                    <h3 class="title font-size-18"><a href="#">Roofing & Flooring Services</a></h3>
-                                    <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
-                                    <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
-                                </div>
                             </div>
                         </div>
                         <!-- /.cbp-item -->
 
                     </div>
-                    <!-- /#service-wrap -->
+                    <!-- /.wprt-service -->
 
                 </div>
-                <!-- /.wprt-service -->
+                <!-- /.col-md-12 -->
+
+                <div class="col-md-12">
+                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                </div>
+                <!-- /.col-md-12 -->
 
             </div>
-            <!-- /.col-md-12 -->
-
-            <div class="col-md-12">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
-            </div>
-            <!-- /.col-md-12 -->
+            <!-- /.row -->
 
         </div>
-        <!-- /.row -->
+        <!-- /.container -->
 
     </div>
-    <!-- /.container -->
-
 </section>
+
+@*   <div class="cbp-item">
+            <div class="service-item clearfix">
+                <div class="thumb"><img src="~/assets/img/services/10.jpg" alt="image" /></div>
+                <div class="service-item-wrap">
+                    <h3 class="title font-size-18"><a href="#">Green Building</a></h3>
+                    <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
+                    <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
+                </div>
+            </div>
+        </div>
+        <!-- /.cbp-item -->
+
+        <div class="cbp-item">
+            <div class="service-item clearfix">
+                <div class="thumb"><img src="~/assets/img/services/12.jpg" alt="image" /></div>
+                <div class="service-item-wrap">
+                    <h3 class="title font-size-18"><a href="#">Resconstruction Services</a></h3>
+                    <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
+                    <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
+                </div>
+            </div>
+        </div>
+        <!-- /.cbp-item -->
+
+        <div class="cbp-item">
+            <div class="service-item clearfix">
+                <div class="thumb"><img src="~/assets/img/services/10.jpg" alt="image" /></div>
+                <div class="service-item-wrap">
+                    <h3 class="title font-size-18"><a href="#">Roofing & Flooring Services</a></h3>
+                    <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
+                    <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
+                </div>
+            </div>
+        </div>
+        <!-- /.cbp-item -->
+
+    </div>
+    <!-- /#service-wrap -->
+*@
