Blog uchun TagHelper yazdim

--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -23,7 +23,7 @@
                                     <div class="thumb"><img src="@item.Image" alt="image" /></div>
                                     <div class="service-item-wrap">
                                         <h3 class="title font-size-18"><a href="#">@item.Tittle</a></h3>
-                                        <p>@item.Content</p>
+                                        <p text="@item.Content"></p>
                                         <a asp-controller="Blog" asp-action="Inner" class="wprt-button small rounded-3px">READ MORE</a>
                                     </div>
                                 }
