--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -42,7 +41,6 @@
             <!--logo end-->
 
             <vc:Claims></vc:Claims>
-
         </header>
         <!--header end-->
         <!--sidebar start-->
@@ -81,10 +79,8 @@
                             <li><a href="image_cropping.html">Image Cropping</a></li>
                         </ul>
                     </li>
-                    
-                   
-                    <!--multi level menu end-->
 
+                    <!--multi level menu end-->
                 </ul>
                 <!-- sidebar menu end-->
             </div>
@@ -94,10 +90,7 @@
             <section class="wrapper">
                 @RenderBody()
             </section>
-           
         </section>
-      
-
     </section>
 
     <!-- js placed at the end of the document so the pages load faster -->
@@ -143,8 +136,6 @@
         $(function () {
             $('select.styled').customSelect();
         });
-
     </script>
-
 </body>
 </html>
