--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -13,7 +13,7 @@
                 <div class="link"><a asp-controller="About" asp-action="Index" class="wprt-button small rounded-3px">READ MORE</a></div>
                 <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
                 <div class="text-center">
-                    <img src="@Model.Image" alt="image" />
+                    <img src="@Model.Image" alt="image" height="780" width="1170"/>
                 </div>
             </div>
             <!-- /.col-md-12 -->
