--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
@@ -7,7 +7,7 @@
         <div class="row">
             <aside class="profile-nav col-lg-3">
                 <section class="panel">
-                    <vc:admin-edit></vc:admin-edit>
+                    @await Component.InvokeAsync("AdminEdit")
                     <ul class="nav nav-pills nav-stacked">
                         <li><a asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
                         <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@Model.Id"> <i class="icon-edit"></i> Edit profile</a></li>
