Template-ni qaydaya saldim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Contact/Create.cshtml
@@ -10,46 +10,55 @@
                 <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Create" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <div class="col-lg-10">
+                            <label>Title Aze</label>
                             <input type="text" asp-for="TittleAz" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
+                            <label>Title Eng</label>
                             <input asp-for="TittleEn" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
+                            <label>Title Ru</label>
                             <input asp-for="TittleRu" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentAz" class="form-control " id="ccomment" required=""></textarea>
+                            <label>Content Aze</label>
+                            <textarea asp-for="ContentAz" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentEn" class="form-control " id="ccomment" required=""></textarea>
+                            <label>Content Eng</label>
+                            <textarea asp-for="ContentEn" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-lg-10">
-                            <textarea asp-for="ContentRu" class="form-control " id="ccomment" required=""></textarea>
+                            <label>Content Ru</label>
+                            <textarea asp-for="ContentRu" class="form-control " id="ccomment"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
+                            <label>Address</label>
                             <input type="text" asp-for="Address" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
+                            <label>Phone Number</label>
                             <input type="text" asp-for="PhoneNumber" id="f-name" class="form-control">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-lg-10">
+                            <label>Email</label>
                             <input type="text" asp-for="Email" id="f-name" class="form-control">
                         </div>
                     </div>
