--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -153,7 +153,7 @@
         @await Component.InvokeAsync("About")
         @await Component.InvokeAsync("Service")
         @await Component.InvokeAsync("Portfolio")
-        @*@await Component.InvokeAsync("Testimonial")*@
+        @await Component.InvokeAsync("Testimonial")
 
 
                 </div>
