--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_MenuView.cshtml
@@ -7,3 +7,4 @@
 <li><a asp-area="ConstructionAdmin" asp-controller="Description" asp-action="Index">Description</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Contact" asp-action="Index">Contact</a></li>
 <li><a asp-area="ConstructionAdmin" asp-controller="Image" asp-action="Index">Images</a></li>
+<li><a asp-area="ConstructionAdmin" asp-controller="Testimonial" asp-action="Add">Testimonial</a></li>
