--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -4,7 +4,7 @@
 @using ConstructionSite.DTO.FrontViewModels.About
 @using ConstructionSite.DTO.FrontViewModels.Portfoli
 @using ConstructionSite.DTO.FrontViewModels.Service
-@using ConstructionSite.DTO.AdminViewModels.Testimonial 
+@using ConstructionSite.DTO.FrontViewModels.Testimonial 
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Models
 @using ConstructionSite.DTO.FrontViewModels.Blog
